--- a/dublin_bus/dublin_bus/index.html
+++ b/dublin_bus/dublin_bus/index.html
@@ -13,7 +13,7 @@
 
     <body>
 	{% block content %}
-	{{'test'}}
+	hello
 	{% endblock content %}
         <div id='menu'>{{test}}</div>
         <div id='map'></div>
